k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: image-video-gallery-ingress
  namespace: image-video-gallery
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: gallery.shrinidhi.space
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 9000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 5002
